1 - Update package title bigger
2 - send email to member from backend
3 - add table mail