@@ -9,7 +9,7 @@ DB_CONNECTION=mysql
 DB_HOST=localhost
 DB_PORT=3306
 DB_DATABASE=btc
-DB_USERNAME=root
+DB_USERNAME=admin
 DB_PASSWORD=123
 
 BROADCAST_DRIVER=log
